[package]
name = "cgs-internal"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "rust bindings for CGSInternal (private CoreGraphics routines)"

[dependencies]
core-foundation = "0.10.1"
libc = "0.2.180"

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin", "aarch64-apple-darwin"]

[features]
default = ["link"]
